prevent section overlapping in mobile

--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@ section {
   top: 0;
   width:100%;
   width:auto;
-  height:100vh;
+  height:100%;
   text-align:center;
 }
 
@@ -162,8 +162,8 @@ button, input[type="submit"], input[type="reset"] {
 
 #HomeText{
   top:0px;
-  height: 100vh;
-  width:100vw;
+  height: 100%;
+  width:100%;
   position: relative;
   text-align:center;
   background:rgba(255,255,255,.5);
@@ -173,7 +173,7 @@ button, input[type="submit"], input[type="reset"] {
   position: absolute;
   top:0;
   width:100%;
-  height:100vh;
+  height:100%;
   background:gainsboro;
   text-align:center;
 }
@@ -302,7 +302,7 @@ button, input[type="submit"], input[type="reset"] {
     vertical-align:top;
     padding-left:40px;
     background:rgba(255,255,255,.6);
-    height:100vh;
+    height:100%;
     min-width:90%;
   }
 
